<resources>
    <string name="app_name">FreeMarket</string>
    <string name="product_name">Nombre del producto <font color='#ff0000'>*</font></string>
    <string name="et_product_name">Nombre del producto...</string>
    <string name="description">Descripcion</string>
    <string name="et_description">Descripcion...</string>
    <string name="contact_email">Mail de contacto <font color='#ff0000'>*</font></string>
    <string name="et_contact_email">Correo electronico...</string>
    <string name="price">Precio <font color='#ff0000'>*</font></string>
    <string name="et_price">Precio...</string>
    <string name="category">Categoria<font color='#ff0000'>*</font></string>
    <string name="offer_discount">Ofrecer descuento de envio</string>
    <string name="personal_withdrawal">Retiro en persona</string>
    <string name="address">Direccion de retiro<font color='#ff0000'>*</font></string>
    <string name="et_address">Direccion...</string>
    <string name="terms_and_conditions">Aceptar terminos y condiciones<font color='#ff0000'>*</font></string>
    <string name="bt_publish">PUBLICAR</string>
</resources>