<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name" />

    <EditText
        android:id="@+id/tituloEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:rotationX="2"
        android:singleLine="true"
        android:hint="@string/et_product_name" />

    <TextView
        android:id="@+id/textViewDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <EditText
        android:id="@+id/editTextDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/et_description" />

    <TextView
        android:id="@+id/textViewCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_email" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/et_contact_email" />

    <TextView
        android:id="@+id/textViewPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price" />

    <EditText
        android:id="@+id/editTextPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/et_price" />

    <TextView
        android:id="@+id/textViewCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category" />

    <TextView
        android:id="@+id/textViewSelectedCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/selectedCategoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Elegir categoria" />

    <Switch
        android:id="@+id/switchDescuento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offer_discount" />

    <SeekBar
        android:id="@+id/seekBarDescuento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

    <TextView
        android:id="@+id/textViewPorcentaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView" />

    <CheckBox
        android:id="@+id/checkBoxRetiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal_withdrawal" />

    <TextView
        android:id="@+id/textViewDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <EditText
        android:id="@+id/editTextDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/et_address" />

    <CheckBox
        android:id="@+id/checkBoxTyC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions" />

    <Button
        android:id="@+id/buttonPublicar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_publish" />

</LinearLayout>